novator: ACORN-1076 z-index issue in search menu

--- a/public_html/extensions/novator/storefront/view/novator/css/tm_style.css
+++ b/public_html/extensions/novator/storefront/view/novator/css/tm_style.css
@@ -1891,6 +1891,7 @@ section {
 #product_details {
     .product-sticky {
         top: 110px;
+        z-index: 999!important;
     }
 }
 
